--- a/Neural Networks/MultiLayer.ipynb
+++ b/Neural Networks/MultiLayer.ipynb
@@ -9,13 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1595]])\n",
-      "tensor([[0.1595]])\n"
+      "tensor([[0.3171]])\n"
      ]
     }
    ],
    "source": [
-    "#Getting Started with Tensors in Pytorch by building single layered and multilayered Neural Network\n",
     "import torch\n",
     "\n",
     "def activation(x):\n",
@@ -24,24 +22,26 @@
     "### Generate some data\n",
     "torch.manual_seed(7) # Set the random seed so things are predictable\n",
     "\n",
-    "# Features are 5 random normal variables\n",
-    "features = torch.randn((1, 5))\n",
-    "# True weights for our data, random normal variables again\n",
-    "weights = torch.randn_like(features)\n",
-    "# and a true bias term\n",
-    "bias = torch.randn((1, 1))\n",
+    "# Features are 3 random normal variables\n",
+    "features = torch.randn((1, 3))\n",
     "\n",
-    "##output of this network using the weights and bias tensors\n",
-    "y = activation(torch.sum(features*weights) + bias)\n",
-    "#OR\n",
-    "y = activation((features*weights).sum() + bias)\n",
-    "print(y)\n",
+    "# Define the size of each layer in our network\n",
+    "n_input = features.shape[1]     # Number of input units, must match number of input features\n",
+    "n_hidden = 2                    # Number of hidden units \n",
+    "n_output = 1                    # Number of output units\n",
     "\n",
-    "## Calculate the output of this network using matrix multiplication\n",
-    "weights = weights.view(5,1)\n",
-    "y = activation(torch.mm(features, weights) + bias)\n",
+    "# Weights for inputs to hidden layer\n",
+    "W1 = torch.randn(n_input, n_hidden)\n",
+    "# Weights for hidden layer to output layer\n",
+    "W2 = torch.randn(n_hidden, n_output)\n",
     "\n",
-    "print(y)"
+    "# and bias terms for hidden and output layers\n",
+    "B1 = torch.randn((1, n_hidden))\n",
+    "B2 = torch.randn((1, n_output))\n",
+    "\n",
+    "h = activation(torch.mm(features, W1) + B1)\n",
+    "output = activation(torch.mm(h, W2) + B2)\n",
+    "print(output)"
    ]
   },
   {
