--- a/Number Classification/Digits_classifier.ipynb
+++ b/Number Classification/Digits_classifier.ipynb
@@ -34,7 +34,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Building a feed-forward model\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(784,128),\n",
+    "                     nn.ReLU(),\n",
+    "                     nn.Linear(128,64),\n",
+    "                     nn.ReLU(),\n",
+    "                     nn.Linear(64,10))\n",
+    "#Defining Loss\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "#Getting the data\n",
+    "images, lables = next(iter(trainloader))\n",
+    "\n",
+    "#Flatening the images\n",
+    "images = images.view(images.shape[0], -1)\n",
+    "\n",
+    "logits = model(images)\n",
+    "\n",
+    "loss = criterion(logits, images)"
+   ]
   }
  ],
  "metadata": {
