--- a/Number Classification/Digits_classifier.ipynb
+++ b/Number Classification/Digits_classifier.ipynb
@@ -31,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3156, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "#Building a feed-forward model\n",
     "\n",
@@ -51,10 +59,19 @@
     "#Flatening the images\n",
     "images = images.view(images.shape[0], -1)\n",
     "\n",
+    "#forward pass and get our logits\n",
     "logits = model(images)\n",
-    "\n",
-    "loss = criterion(logits, images)"
+    "#Calculating loss\n",
+    "loss = criterion(logits, lables)\n",
+    "print(loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
