--- a/Number Classification/Digits_classifier.ipynb
+++ b/Number Classification/Digits_classifier.ipynb
@@ -49,9 +49,10 @@
     "                     nn.ReLU(),\n",
     "                     nn.Linear(128,64),\n",
     "                     nn.ReLU(),\n",
-    "                     nn.Linear(64,10))\n",
+    "                     nn.Linear(64,10),\n",
+    "                     nn.LogSoftmax(dim = 1))\n",
     "#Defining Loss\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "#Getting the data\n",
     "images, lables = next(iter(trainloader))\n",
