--- a/Number Classification/Digits_classifier.ipynb
+++ b/Number Classification/Digits_classifier.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -97,20 +97,35 @@
      "text": [
       "Initial weights -  Parameter containing:\n",
       "tensor([[-0.0355, -0.0229, -0.0150,  ...,  0.0268, -0.0013,  0.0128],\n",
-      "        [ 0.0008, -0.0145, -0.0158,  ..., -0.0068, -0.0162, -0.0176],\n",
+      "        [ 0.0009, -0.0145, -0.0158,  ..., -0.0068, -0.0162, -0.0176],\n",
       "        [-0.0126,  0.0258,  0.0253,  ..., -0.0285, -0.0033, -0.0321],\n",
       "        ...,\n",
       "        [ 0.0290,  0.0094,  0.0014,  ...,  0.0097, -0.0104, -0.0270],\n",
       "        [-0.0008, -0.0201, -0.0252,  ...,  0.0176,  0.0107, -0.0357],\n",
       "        [ 0.0006, -0.0253,  0.0301,  ...,  0.0320, -0.0110,  0.0161]],\n",
       "       requires_grad=True)\n",
-      "Final weights -  tensor([[ 0.0010,  0.0010,  0.0010,  ...,  0.0010,  0.0010,  0.0010],\n",
-      "        [-0.0004, -0.0004, -0.0004,  ..., -0.0004, -0.0004, -0.0004],\n",
-      "        [-0.0014, -0.0014, -0.0014,  ..., -0.0014, -0.0014, -0.0014],\n",
+      "Final weights -  tensor([[ 3.0629e-03,  3.0629e-03,  3.0629e-03,  ...,  3.0629e-03,\n",
+      "          3.0629e-03,  3.0629e-03],\n",
+      "        [ 2.3009e-04,  2.3009e-04,  2.3009e-04,  ...,  2.3009e-04,\n",
+      "          2.3009e-04,  2.3009e-04],\n",
+      "        [-1.4893e-03, -1.4893e-03, -1.4893e-03,  ..., -1.4893e-03,\n",
+      "         -1.4893e-03, -1.4893e-03],\n",
       "        ...,\n",
-      "        [ 0.0006,  0.0006,  0.0006,  ...,  0.0006,  0.0006,  0.0006],\n",
-      "        [ 0.0014,  0.0014,  0.0014,  ...,  0.0014,  0.0014,  0.0014],\n",
-      "        [-0.0003, -0.0003, -0.0003,  ..., -0.0003, -0.0003, -0.0003]])\n"
+      "        [ 2.4026e-05,  2.4026e-05,  2.4026e-05,  ...,  2.4026e-05,\n",
+      "          2.4026e-05,  2.4026e-05],\n",
+      "        [-5.0068e-03, -5.0068e-03, -5.0068e-03,  ..., -5.0068e-03,\n",
+      "         -5.0068e-03, -5.0068e-03],\n",
+      "        [-4.2624e-04, -4.2624e-04, -4.2624e-04,  ..., -4.2624e-04,\n",
+      "         -4.2624e-04, -4.2624e-04]])\n",
+      "Final weights -  Parameter containing:\n",
+      "tensor([[-0.0356, -0.0229, -0.0150,  ...,  0.0268, -0.0013,  0.0128],\n",
+      "        [ 0.0008, -0.0145, -0.0158,  ..., -0.0068, -0.0162, -0.0176],\n",
+      "        [-0.0126,  0.0258,  0.0253,  ..., -0.0285, -0.0033, -0.0320],\n",
+      "        ...,\n",
+      "        [ 0.0290,  0.0094,  0.0014,  ...,  0.0097, -0.0104, -0.0270],\n",
+      "        [-0.0008, -0.0201, -0.0252,  ...,  0.0177,  0.0108, -0.0357],\n",
+      "        [ 0.0006, -0.0253,  0.0302,  ...,  0.0320, -0.0110,  0.0161]],\n",
+      "       requires_grad=True)\n"
      ]
     }
    ],
@@ -131,7 +146,8 @@
     "loss.backward()\n",
     "print('Final weights - ', model[0].weight.grad)\n",
     "\n",
-    "optimizer.step()\n"
+    "optimizer.step()\n",
+    "print('Final weights - ', model[0].weight)"
    ]
   },
   {
