--- a/Number Classification/Digits_classifier.ipynb
+++ b/Number Classification/Digits_classifier.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,13 +42,19 @@
       "Before Backward:\n",
       " None\n",
       "After Backward:\n",
-      " tensor([[ 0.0022,  0.0022,  0.0022,  ...,  0.0022,  0.0022,  0.0022],\n",
-      "        [-0.0003, -0.0003, -0.0003,  ..., -0.0003, -0.0003, -0.0003],\n",
-      "        [ 0.0019,  0.0019,  0.0019,  ...,  0.0019,  0.0019,  0.0019],\n",
+      " tensor([[-2.8558e-05, -2.8558e-05, -2.8558e-05,  ..., -2.8558e-05,\n",
+      "         -2.8558e-05, -2.8558e-05],\n",
+      "        [-1.7204e-03, -1.7204e-03, -1.7204e-03,  ..., -1.7204e-03,\n",
+      "         -1.7204e-03, -1.7204e-03],\n",
+      "        [ 5.4019e-04,  5.4019e-04,  5.4019e-04,  ...,  5.4019e-04,\n",
+      "          5.4019e-04,  5.4019e-04],\n",
       "        ...,\n",
-      "        [-0.0019, -0.0019, -0.0019,  ..., -0.0019, -0.0019, -0.0019],\n",
-      "        [-0.0010, -0.0010, -0.0010,  ..., -0.0010, -0.0010, -0.0010],\n",
-      "        [-0.0006, -0.0006, -0.0006,  ..., -0.0006, -0.0006, -0.0006]])\n"
+      "        [-2.2437e-04, -2.2437e-04, -2.2437e-04,  ..., -2.2437e-04,\n",
+      "         -2.2437e-04, -2.2437e-04],\n",
+      "        [ 6.0656e-04,  6.0656e-04,  6.0656e-04,  ...,  6.0656e-04,\n",
+      "          6.0656e-04,  6.0656e-04],\n",
+      "        [ 4.8198e-04,  4.8198e-04,  4.8198e-04,  ...,  4.8198e-04,\n",
+      "          4.8198e-04,  4.8198e-04]])\n"
      ]
     }
    ],
@@ -82,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,36 +96,46 @@
      "output_type": "stream",
      "text": [
       "Initial weights -  Parameter containing:\n",
-      "tensor([[-0.0331,  0.0155,  0.0159,  ..., -0.0125, -0.0154,  0.0085],\n",
-      "        [ 0.0099, -0.0108,  0.0184,  ..., -0.0114,  0.0168,  0.0040],\n",
-      "        [-0.0188,  0.0073, -0.0138,  ...,  0.0034,  0.0099, -0.0234],\n",
+      "tensor([[-1.0889e-02, -7.2019e-03, -4.6896e-04,  ...,  6.6161e-06,\n",
+      "         -4.1888e-03,  2.5887e-02],\n",
+      "        [-2.8772e-02, -3.1041e-02,  1.9158e-03,  ...,  2.4674e-02,\n",
+      "         -6.5933e-03,  3.0679e-02],\n",
+      "        [-3.0857e-02,  1.3269e-02,  1.1038e-05,  ...,  1.4617e-02,\n",
+      "          6.7315e-03,  2.4957e-02],\n",
       "        ...,\n",
-      "        [ 0.0150,  0.0003, -0.0131,  ..., -0.0276,  0.0296, -0.0214],\n",
-      "        [ 0.0302, -0.0234,  0.0153,  ..., -0.0059, -0.0343,  0.0016],\n",
-      "        [-0.0233, -0.0337, -0.0336,  ...,  0.0174,  0.0313, -0.0199]],\n",
-      "       requires_grad=True)\n",
-      "Final weights -  tensor([[-1.6438e-03, -1.6438e-03, -1.6438e-03,  ..., -1.6438e-03,\n",
-      "         -1.6438e-03, -1.6438e-03],\n",
-      "        [ 2.0498e-03,  2.0498e-03,  2.0498e-03,  ...,  2.0498e-03,\n",
-      "          2.0498e-03,  2.0498e-03],\n",
-      "        [ 1.5989e-03,  1.5989e-03,  1.5989e-03,  ...,  1.5989e-03,\n",
-      "          1.5989e-03,  1.5989e-03],\n",
+      "        [ 8.3062e-04, -2.3143e-02, -3.2421e-02,  ..., -1.0852e-02,\n",
+      "         -3.4783e-02, -2.0181e-02],\n",
+      "        [-3.0668e-02,  2.0341e-04, -3.3294e-02,  ...,  2.3626e-02,\n",
+      "          3.1622e-02,  2.9218e-02],\n",
+      "        [-2.0081e-02,  2.8791e-02,  2.9054e-02,  ..., -6.0315e-03,\n",
+      "         -1.8485e-02,  5.0280e-03]], requires_grad=True)\n",
+      "Final weights -  tensor([[-1.2269e-03, -1.2269e-03, -1.2269e-03,  ..., -1.2269e-03,\n",
+      "         -1.2269e-03, -1.2269e-03],\n",
+      "        [-1.0214e-03, -1.0214e-03, -1.0214e-03,  ..., -1.0214e-03,\n",
+      "         -1.0214e-03, -1.0214e-03],\n",
+      "        [-6.2344e-04, -6.2344e-04, -6.2344e-04,  ..., -6.2345e-04,\n",
+      "         -6.2345e-04, -6.2345e-04],\n",
       "        ...,\n",
-      "        [-1.4140e-03, -1.4140e-03, -1.4140e-03,  ..., -1.4140e-03,\n",
-      "         -1.4140e-03, -1.4140e-03],\n",
-      "        [-5.2854e-05, -5.2854e-05, -5.2854e-05,  ..., -5.2854e-05,\n",
-      "         -5.2854e-05, -5.2854e-05],\n",
-      "        [-1.4648e-03, -1.4648e-03, -1.4648e-03,  ..., -1.4648e-03,\n",
-      "         -1.4648e-03, -1.4648e-03]])\n",
+      "        [ 7.8645e-05,  7.8645e-05,  7.8645e-05,  ...,  7.8645e-05,\n",
+      "          7.8645e-05,  7.8645e-05],\n",
+      "        [-3.4162e-04, -3.4162e-04, -3.4162e-04,  ..., -3.4162e-04,\n",
+      "         -3.4162e-04, -3.4162e-04],\n",
+      "        [ 1.7276e-03,  1.7276e-03,  1.7276e-03,  ...,  1.7276e-03,\n",
+      "          1.7276e-03,  1.7276e-03]])\n",
       "Final weights -  Parameter containing:\n",
-      "tensor([[-0.0330,  0.0155,  0.0159,  ..., -0.0124, -0.0154,  0.0086],\n",
-      "        [ 0.0099, -0.0108,  0.0184,  ..., -0.0114,  0.0167,  0.0039],\n",
-      "        [-0.0188,  0.0072, -0.0138,  ...,  0.0034,  0.0099, -0.0234],\n",
+      "tensor([[-1.0877e-02, -7.1896e-03, -4.5669e-04,  ...,  1.8885e-05,\n",
+      "         -4.1765e-03,  2.5899e-02],\n",
+      "        [-2.8762e-02, -3.1031e-02,  1.9260e-03,  ...,  2.4684e-02,\n",
+      "         -6.5831e-03,  3.0690e-02],\n",
+      "        [-3.0851e-02,  1.3275e-02,  1.7272e-05,  ...,  1.4624e-02,\n",
+      "          6.7377e-03,  2.4963e-02],\n",
       "        ...,\n",
-      "        [ 0.0151,  0.0003, -0.0131,  ..., -0.0275,  0.0296, -0.0214],\n",
-      "        [ 0.0302, -0.0234,  0.0153,  ..., -0.0059, -0.0343,  0.0016],\n",
-      "        [-0.0233, -0.0337, -0.0336,  ...,  0.0174,  0.0313, -0.0199]],\n",
-      "       requires_grad=True)\n"
+      "        [ 8.2983e-04, -2.3144e-02, -3.2422e-02,  ..., -1.0853e-02,\n",
+      "         -3.4784e-02, -2.0182e-02],\n",
+      "        [-3.0664e-02,  2.0682e-04, -3.3290e-02,  ...,  2.3630e-02,\n",
+      "          3.1625e-02,  2.9221e-02],\n",
+      "        [-2.0099e-02,  2.8774e-02,  2.9037e-02,  ..., -6.0487e-03,\n",
+      "         -1.8502e-02,  5.0107e-03]], requires_grad=True)\n"
      ]
     }
    ],
