Pre-Trained Model Added

--- a/Style Transfer/Style_Transfer.ipynb
+++ b/Style Transfer/Style_Transfer.ipynb
@@ -60,6 +60,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "Downloading: \"https://download.pytorch.org/models/vgg19-dcbb9e9d.pth\" to /home/shreyansh/.cache/torch/checkpoints/vgg19-dcbb9e9d.pth\n100%|██████████| 548M/548M [02:35<00:00, 3.70MB/s]\n"
+    }
+   ],
+   "source": [
+    "# get the \"features\" portion of VGG19 (we will not need the \"classifier\" portion)\n",
+    "vgg = models.vgg19(pretrained=True).features\n",
+    "\n",
+    "# freeze all VGG parameters since we're only optimizing the target image\n",
+    "for param in vgg.parameters():\n",
+    "    param.requires_grad_(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
