--- a/Style Transfer/Style_Transfer.ipynb
+++ b/Style Transfer/Style_Transfer.ipynb
@@ -80,6 +80,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Sequential(\n  (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (1): ReLU(inplace=True)\n  (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (3): ReLU(inplace=True)\n  (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n  (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (6): ReLU(inplace=True)\n  (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (8): ReLU(inplace=True)\n  (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n  (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (11): ReLU(inplace=True)\n  (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (13): ReLU(inplace=True)\n  (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (15): ReLU(inplace=True)\n  (16): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (17): ReLU(inplace=True)\n  (18): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n  (19): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (20): ReLU(inplace=True)\n  (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (22): ReLU(inplace=True)\n  (23): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (24): ReLU(inplace=True)\n  (25): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (26): ReLU(inplace=True)\n  (27): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n  (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (29): ReLU(inplace=True)\n  (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (31): ReLU(inplace=True)\n  (32): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (33): ReLU(inplace=True)\n  (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n  (35): ReLU(inplace=True)\n  (36): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n)"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# move the model to GPU, if available\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "vgg.to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Load in Content and Style Images\n",
+    "\n",
+    "You can load in any images you want! Below, provided a helper function for loading in any type and size of image. The `load_image` function also converts images to normalized Tensors.\n",
+    "\n",
+    "Additionally, it will be easier to have smaller images and to squish the content and style images so that they are of the same size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_image(img_path, max_size=400, shape=None):\n",
+    "    ''' Load in and transform an image, making sure the image\n",
+    "       is <= 400 pixels in the x-y dims.'''\n",
+    "    if \"http\" in img_path:\n",
+    "        response = requests.get(img_path)\n",
+    "        image = Image.open(BytesIO(response.content)).convert('RGB')\n",
+    "    else:\n",
+    "        image = Image.open(img_path).convert('RGB')\n",
+    "    \n",
+    "    # large images will slow down processing\n",
+    "    if max(image.size) > max_size:\n",
+    "        size = max_size\n",
+    "    else:\n",
+    "        size = max(image.size)\n",
+    "    \n",
+    "    if shape is not None:\n",
+    "        size = shape\n",
+    "        \n",
+    "    in_transform = transforms.Compose([\n",
+    "                        transforms.Resize(size),\n",
+    "                        transforms.ToTensor(),\n",
+    "                        transforms.Normalize((0.485, 0.456, 0.406), \n",
+    "                                             (0.229, 0.224, 0.225))])\n",
+    "\n",
+    "    # discard the transparent, alpha channel (that's the :3) and add the batch dimension\n",
+    "    image = in_transform(image)[:3,:,:].unsqueeze(0)\n",
+    "    \n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
