Updating notebook and adding some images for Project

--- a/Style Transfer/Style_Transfer.ipynb
+++ b/Style Transfer/Style_Transfer.ipynb
@@ -149,6 +149,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Next, I'm loading in images by file name and forcing the style image to be the same size as the content image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load in content and style image\n",
+    "content = load_image('images/octopus.jpg').to(device)\n",
+    "# Resize style to match content, makes code easier\n",
+    "style = load_image('images/hockney.jpg', shape=content.shape[-2:]).to(device)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
