--- a/Style Transfer/Style_Transfer.ipynb
+++ b/Style Transfer/Style_Transfer.ipynb
@@ -171,6 +171,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper function for un-normalizing an image \n",
+    "# and converting it from a Tensor image to a NumPy image for display\n",
+    "def im_convert(tensor):\n",
+    "    \"\"\" Display a tensor as an image. \"\"\"\n",
+    "    \n",
+    "    image = tensor.to(\"cpu\").clone().detach()\n",
+    "    image = image.numpy().squeeze()\n",
+    "    image = image.transpose(1,2,0)\n",
+    "    image = image * np.array((0.229, 0.224, 0.225)) + np.array((0.485, 0.456, 0.406))\n",
+    "    image = image.clip(0, 1)\n",
+    "\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
